--- a/theme/templates/includes/location.html
+++ b/theme/templates/includes/location.html
@@ -4,11 +4,10 @@
 
     <h1>Manaus - Amazonas</h1>
     <p><a href="http://www3.uea.edu.br/" target="_blank" class="link">Acesse o site da UEA</a></p>
-    <p><a href="http://www.accorhotels.com/pt-br/hotel-8945-caesar-business-manaus/index.shtml" target="_blank" class="link">Caesar Business Manaus</a></p>
   </div>
   <div class="row rates">
     <div class="tax">
-      <h2>HOSPEDAGENS HOTEL Caesar Business Manaus - 3 noites (11, 12, 13)</h2>
+      <h2><a href="http://www.accorhotels.com/pt-br/hotel-8945-caesar-business-manaus/index.shtml" target="_blank" class="link">HOTEL Caesar Business Manaus</a> - 3 noites (11, 12, 13)</h2>
       <p>
         Quarto Superior – R$ 645,66<br>
         Quarto Luxo – R$ 755,82
