--- a/theme/templates/includes/speakers.html
+++ b/theme/templates/includes/speakers.html
@@ -5,17 +5,13 @@
         <ul class="speakers-list">
 
             <li class="speaker">
-                <a href="#" target="_blank" class="speaker-link">
+                <a href="https://about.me/fmasanori" target="_blank" class="speaker-link">
                     <div class="photo">
-                        <img src="/images/speakers/shape-people3.png" alt="Temp">
+                        <img src="/images/massanori.jpg" alt="Fernando Massanori">
                     </div>
 
-                    <h2 class="speaker-name">Nome</h2>
-                    <p class="speaker-description"> Descrição ... Descrição... Descrição ...
-                         Descrição ...
-                         Descrição ...
-                         Descrição ... Descrição ... Descrição ... Descrição ... Descrição ... Descrição ...
-
+                    <h2 class="speaker-name">Fernando Massanori</h2>
+                    <p class="speaker-description">Professor na FATEC de São José dos Campos, criador do curso <a href="http://t.co/HkaElt8IP1">Python para Zumbis</a>, adora dar aulas nos quatro cantos do mundo. Formado em Computação pelo IME-USP e mestrado pelo ITA. Desenvolveu projetos para a Cobra Tecnologia, Credicard Mastercard, PriceWaterhouse &amp; Coopers e Itaú BankBoston. Interesses: Python, NoSQL, Pentaho, Google Technology, Facebook
 
                     </p>
                 </a>
@@ -27,13 +23,8 @@
                         <img src="/images/speakers/shape-people3.png" alt="Temp">
                     </div>
 
-                    <h2 class="speaker-name">Nome</h2>
-                    <p class="speaker-description"> Descrição ... Descrição... Descrição ...
-                         Descrição ...
-                         Descrição ...
-                         Descrição ... Descrição ... Descrição ... Descrição ... Descrição ... Descrição ...
-
-
+                    <h2 class="speaker-name">A definir</h2>
+                    <p class="speaker-description">Estamos procurando um segundo keynote speaeker. Envia suas sugestões no grupo do telegram.
                     </p>
                 </a>
             </li>
