--- a/theme/templates/includes/sponsors.html
+++ b/theme/templates/includes/sponsors.html
@@ -3,26 +3,15 @@
         <h1>Patrocinadores</h1>
 
         <h1>
-            <a href="https://drive.google.com/file/d/0B0fYYHtjOrCAQUIwV0JfWk15ZjQ/view"
-               target="_blank">
-         <span style="text-align:center"
-         >Seja um patrocinador</span></a>
+            <a href="mailto:amazonia@python.org.br" target="_blank">
+            <span style="text-align:center">Seja um patrocinador</span></a>
         </h1>
 
         <ul class="sponsors-list">
-            <li class="item">
-                <!-- <a href="http://www.globo.com/" target="_blank" class="item-link">
-                    <p class="category">Platina</p>
-
-                    <div class="imgs">
-                        <img src="/images/sponsors/platinum/globo.com.svg" alt="Globo.com">
-                    </div>
-                </a> -->
-            </li>
 
             <li class="item">
                 <a href="https://www.python.org/psf/" target="_blank" class="item-link">
-                    <p class="category">Ouro</p>
+                    <p class="category">Apoio</p>
 
                     <div class="imgs">
                         <img src="/images/sponsors/gold/python-foundation.svg" alt="Python Foundation">
@@ -31,40 +20,8 @@
             </li>
 
             <li class="item">
-                <a href="http://google.com/" target="_blank" class="item-link">
-                    <p class="category">Prata</p>
-
-                    <div class="imgs">
-                        <img src="/images/sponsors/silver/google.png" alt="Google">
-                    </div>
-                </a>
-            </li>
-
-            <li class="item">
-                <!-- <a href="http://evolux.net.br/" target="_blank" class="item-link">
-                    <p class="category">Bronze</p>
-
-                    <div class="imgs">
-                        <img src="/images/sponsors/bronze/evolux.png" alt="Evolux">
-                    </div>
-                </a> -->
-            </li>
-
-            <li class="item">
-                <!-- <a href="http://www.cesusc.edu.br/portal/" target="_blank" class="item-link">
-                    <p class="category">Parceiro</p>
-
-                    <div class="imgs">
-                        <img src="/images/sponsors/partners/cesusc.png" alt="Cesusc">
-                    </div>
-                </a> -->
-            </li>
-
-
-            <li class="item">
                 <a href="http://wiki.python.org.br/" target="_blank" class="item-link">
                     <p class="category">Apoio</p>
-
                     <div class="imgs">
                         <img src="/images/sponsors/support/apyb.png" alt="APyB">
                     </div>
