--- a/theme/templates/includes/welcome.html
+++ b/theme/templates/includes/welcome.html
@@ -12,13 +12,15 @@
     </header>
 
     <article class="info">
-      <h1>PyCon Amazônia conferência brasileira da comunidade Python do Norte do Brasil</h1>
+      <h1>PyCon Amazônia</h1>
+      <h3>1ª conferência da comunidade Python do Norte do Brasil</h3>
 
       <h2>12 e 13 de Agosto de 2017</h2>
 
-      <p>UEA/EST - Manaus/AM</p>
+      <p>Universidade do Estado do Amazonas/Escola Superior de Tecnologia (UEA/EST)<br/>
+      Manaus/AM</p>
 
-      <a href="https://www.eventbrite.com.br/e/python-brasil-12-tickets-24224785987" target="_blank" class="register">INSCREVA-SE AQUI</a>
+      <!-- <a href="#" target="_blank" class="register">INSCREVA-SE AQUI</a> -->
     </article>
   </div>
 </section>
