--- a/theme/templates/includes/about.html
+++ b/theme/templates/includes/about.html
@@ -1,29 +1,32 @@
 <section class="about" id="about">
   <div class="row">
-    <div class="column">
-      {% include "includes/icons/conference-icon.html" %}
-      <h1>Conferência</h1>
-      <p>A PyCon Amazônia reúnirá centenas de pessoas durante 2 dias para discutir sobre software livre, práticas de desenvolvimento e Python.</p>
-      <p class="code-of-conduct"><a href="https://github.com/pythonbrasil/codigo-de-conduta" target="_blank">Leia nosso Código de Conduta</a></p>
-    </div>
+      <div class="column">
+        {% include "includes/icons/conference-icon.html" %}
+        <h1>Conferência</h1>
+        <p>A PyCon Amazônia reunirá centenas de pessoas durante 2 dias para discutir sobre software livre, práticas de desenvolvimento e Python.</p>
+        <p class="code-of-conduct"><a href="https://github.com/pythonbrasil/codigo-de-conduta" target="_blank">Leia nosso Código de Conduta</a></p>
+      </div>
 
-    <div class="column">
-      {% include "includes/icons/staff-icon.html" %}
-      <h1>Organização</h1>
-      <p>A PyCon Amazônia 2017 é organizada pelo PyNorte com ajuda da Apyb (Associação PythonBrasil).</p>
-      <p class="code-of-conduct"><a href="http://wiki.python.org.br/" target="_blank">Acesse o portal da APyB</a></p>
-    </div>
+      <div class="column">
+        {% include "includes/icons/staff-icon.html" %}
+        <h1>Organização</h1>
+        <p>A PyCon Amazônia 2017 é organizada pelo PyNorte com ajuda da Apyb (Associação PythonBrasil).</p>
+        <p class="code-of-conduct"><a href="http://wiki.python.org.br/" target="_blank">Acesse o portal da APyB</a></p>
+      </div>
+  </div>
+  <div class="row">
 
-    <div class="column">
-    <h1>Contato</h1>
-      <p>Email: eventos@python.org.br</p>
-      <p>Telegram: <a href="bit.ly/pynorte">bit.ly/pynorte</a></p>
-    </div>
-
-    <div class="column">
-    <h1>Django Girls</h1>
-      <p>Workshop gratuito de programação para mulheres.</p>
-      <p class="code-of-conduct"><a href="https://djangogirls.org/" target="_blank">Acesse o portal</a></p>
-    </div>
+      <div class="column">
+        {% include "includes/icons/staff-icon.html" %}
+        <h1>Envie sua proposta de palestra!</h1>
+          <p>Apresente na PyCon Amazônia e compartilhe o que você sabe sobre Python com a comunidade.</p>
+          <p class="code-of-conduct"><a href="http://speakerfight.com/events/pycon-amazonia-2017/" target="_blank">Envie sua proposta</a></p>
+      </div>
+      <div class="column">
+        {% include "includes/icons/staff-icon.html" %}
+        <h1>Contato</h1>
+          <p>Email: <a href="mailto:amazonia@python.org.br">amazonia@python.org.br</a></p>
+          <p>Telegram: <a href="bit.ly/pynorte">bit.ly/pynorte</a></p>
+      </div>
   </div>
 </section>
