--- a/theme/templates/includes/days/day1.html
+++ b/theme/templates/includes/days/day1.html
@@ -1,6 +1,6 @@
 <div class="room" id="day1">
-  <h1>Tutoriais</h1>
-  <p class="day-description">Tutoriais são treinamentos de 2 a 8 horas totalmente gratuitos para você se tornar um Jedi.
+  <h1>A definir</h1>
+  <!-- <p class="day-description">Tutoriais são treinamentos de 2 a 8 horas totalmente gratuitos para você se tornar um Jedi.
   <a href="http://blog.pythonbrasil.org.br/se-inscreva-para-os-tutoriais-aqui.html#article" target="_blank" class="register">INSCREVA-SE AQUI</a>
   </p>
   <p class="local">LOCAL: <a target="_blank" href="https://www.google.com.br/maps/place/Faculdade+Cesusc/@-27.5004885,-48.5172277,17z/data=!3m1!4b1!4m5!3m4!1s0x9527468b52090801:0xb067ed420bbae02b!8m2!3d-27.5004885!4d-48.515039?hl=en">Faculdade Cesusc</a></p>
@@ -92,6 +92,6 @@
 
     <p><span class="track track-tutorials">#sala109</span></p>
     <a href="http://speakerfight.com/events/python-brasil12-tutoriais/#unsupervised-learning-with-python" target="_blank"><p class="talk">Unsupervised Learning with Python</p></a>
-    <p class="speaker">Breandan Considine</p>
-  </div>
+    <p class="speaker">Breandan Considine</p> -->
+  <!-- </div> -->
 </div>
