--- a/theme/templates/includes/about.html
+++ b/theme/templates/includes/about.html
@@ -25,7 +25,7 @@
       <div class="column">
         {% include "includes/icons/staff-icon.html" %}
         <h1>Contato</h1>
-          <p>Email: <a href="mailto:amazonia@python.org.br">amazonia@python.org.br</a></p>
+          <p>Email: <a href="mailto:pyamazonia@python.org.br">pyamazonia@python.org.br</a></p>
           <p>Telegram: <a href="bit.ly/pynorte">bit.ly/pynorte</a></p>
       </div>
   </div>
