Voluntários, Keynote e coordenação UEA
Former-commit-id: a857f620f398f3ed0e08f9c2f5840d730264b24a

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -26,7 +26,7 @@
       </div>
       <div class="row">
       Foto de Manaus a noite de <a href="https://www.flickr.com/photos/13786369@N04/5304603727/in/photolist-95KtSX-jqeHbN-c5Hdwu-nPDiLh-9c2X8q-6qxYjW-hkeUVW-iL7L4V-eV1eRj-iXqSkE-jfCz4G-qayLJR-bALCP6-2fELm4-aC7stj-4Wab3T-aC7snd-cwrRUb-bzVEhm-nvTSxz-a7RqZU-aC4Pd6-9jyDV2-AiyWxG-ojdfqk-ofaMJU-bLrk52-c5HdhE-6j8vs9-3bBqfs-bNQkE2-4WaqBT-2fELvD-cmniKQ-oiZkwN-9vwiEz-ohbkd3-aC4NwP-a7RqVw-a7NxXx-aC7rzL-cBvZWN-9ddamL-a7RrCw-a7Nxyv-c5HeJC-f9KDvq-aC7t43-xrFJ75-bi2Ta4/">
-Renato Ribeiro</a>, utilizada nos termos da licença Creative Commons
+Renato Ribeiro</a>, utilizada nos termos da licença Creative Commons. O logotipo da conferência foi criado por Marcos Thomaz (@marcosthomazs)
       </div>
     </footer>
   </div>
