--- a/theme/templates/includes/speakers.html
+++ b/theme/templates/includes/speakers.html
@@ -23,8 +23,8 @@
                         <img src="/images/speakers/shape-people3.png" alt="Temp">
                     </div>
 
-                    <h2 class="speaker-name">A definir</h2>
-                    <p class="speaker-description">Estamos procurando um segundo keynote speaeker. Envia suas sugestões no grupo do telegram.
+                    <h2 class="speaker-name">Nilo Menezes</h2>
+                    <p class="speaker-description">Desenvolvedor, empresário e autor do livro <a href="python.nilo.pro.br">Introdução à Programação com Python</a>. Formado em Processamento de dados e Mestre em Informática pela Universidade Federal do Amazonas (UFAM). Participa ativamente na comunidade Python Brasil e é um dos organizadores da conferência e do grupo PyNorte.
                     </p>
                 </a>
             </li>
