--- a/theme/templates/includes/volunteers.html
+++ b/theme/templates/includes/volunteers.html
@@ -5,7 +5,15 @@
       <li><a href="https://twitter.com/lskbr" target="_blank">Nilo Menezes (PyNorte)</a></li>
       <li><a href="https://twitter.com/apast" target="_blank">Adriano Praia (PyNorte/Manaus)</a></li>
       <li><a href="https://twitter.com/luizfcb" target="_blank">Fabio Barrionuevo da Luz (PyNorte/Palmas)</a></li>
-      <li><a href="https://twitter.com/pixeledbird" target="_blank">João Soares(PyNorte/Belém)</a></li>
+      <li><a href="https://twitter.com/pixeledbird" target="_blank">João Soares (PyNorte/Belém)</a></li>
+      <li>Marcos Thomaz (PyNorte/Rio Branco)</a></li>
+      <li>Pedro Cavalcante (PyNorte/Manaus)</a></li>
+    </ul>
+    <br/>
+    <h1>Coordenação UEA</h1>
+    <ul>
+      <li>Prof&#xaa; Daniele Gordiano Valente (Coordenação Local)</li>
+      <li>Prof&#xaa; Daniele Noronha Pontes (Coordenação Institucional)</li>
     </ul>
   </div>
 
