Programacao, link para compra de ingressos
Former-commit-id: 140da35de5e0a214535480ce2cceacfcbc91e11f [formerly f41648be7a558d69ecd26860dba80fd2280a44fc]
Former-commit-id: ea772f97b69f982b4619c131819b74d38ef5d211

--- a/theme/templates/includes/days/day2.html
+++ b/theme/templates/includes/days/day2.html
@@ -1,43 +1,56 @@
 <div class="room" id="day2">
-  <h1>A definir</h1>
-  <!-- <p class="day-description">Tutoriais são treinamentos de 2 a 8 horas totalmente gratuitos para você se tornar um Jedi.
-  <a href="http://blog.pythonbrasil.org.br/se-inscreva-para-os-tutoriais-aqui.html#article" target="_blank" class="register">INSCREVA-SE AQUI</a>
-  </p>
-  <p class="local">LOCAL: <a target="_blank" href="https://www.google.com.br/maps/place/Faculdade+Cesusc/@-27.5004885,-48.5172277,17z/data=!3m1!4b1!4m5!3m4!1s0x9527468b52090801:0xb067ed420bbae02b!8m2!3d-27.5004885!4d-48.515039?hl=en">Faculdade Cesusc</a></p>
+  <h1>Programação Provisória</h1>
+  <p class="day-description">A submissão de palestras ainda está aberta.</p>
+  <p class="local">LOCAL: UEA /EST</a></p>
 
   <div class="lecture">
     <p class="hour"><time>08:00</time></p>
-
     <p><span class="track track-tutorials">#auditório</span></p>
-    <a href="http://speakerfight.com/events/python-brasil12-tutoriais/#machine-learning-para-hackers-2" target="_blank"><p class="talk">Machine Learning para Hackers</p></a>
-    <p class="speaker">Irio Musskopf</p>
-
-    <p><span class="track track-tutorials">#sala124</span></p>
-    <p class="talk">Django Girls</p>
-    <p class="speaker">Django Girls Floripa</p>
-
-    <p><span class="track track-tutorials">#sala126</span></p>
-    <p class="talk">Django Girls</p>
-    <p class="speaker">Django Girls Floripa</p>
-
-    <p><span class="track track-tutorials">#sala125A</span></p>
-    <a href="http://speakerfight.com/events/python-brasil12-tutoriais/#tutorial-de-git" target="_blank"><p class="talk">Tutorial de Git</p></a>
-    <p class="speaker">Débora Correia</p>
-
-    <p><span class="track track-tutorials">#sala113</span></p>
-    <p class="talk">A definir</p>
+    <p class="talk">Registro</p>
     <p class="speaker"></p>
+  </div>
 
-    <p><span class="track track-tutorials">#sala125B</span></p>
-    <a href="http://speakerfight.com/events/python-brasil12-tutoriais/#pyspark-e-computacao-distribuida" target="_blank"><p class="talk">pyspark e computação distribuida</p></a>
-    <p class="speaker">Robson Luis</p>
-   </div>
+  <div class="lecture">
+    <p class="hour"><time>09:00</time></p>
+    <p><span class="track track-tutorials">#auditório</span></p>
+    <p class="talk">Abertura</p>
+    <p class="speaker"></p>
+  </div>
 
-   <div class="lecture">
-    <p class="hour"><time>09:45</time></p>
+  <div class="lecture">
+    <p class="hour"><time>09:15</time></p>
+    <p><span class="track track-tutorials">#auditório</span></p>
+    <p class="talk">KeyNote</p>
+    <p class="speaker">Nilo Menezes</p>
+  </div>
+
+  <div class="lecture">
+    <p class="hour"><time>10:00</time></p>
     <p class="talk">Coffe Break</p>
     <p class="speaker"></p>
-   </div>
+  </div>
+
+  <div class="lecture">
+    <p class="hour"><time>10:30</time></p>
+    <p><span class="track track-tutorials">#auditório</span></p>
+    <p class="talk">Programming soft skills</p>
+    <p class="speaker">Wille Marcel</p>
+
+    <p><span class="track track-tutorials">#sala 1</span></p>
+    <p class="talk">Docker, Django e Amazon Container Services</p>
+    <p class="speaker">Nilo Menezes</p>
+  </div>
+
+  <div class="lecture">
+    <p class="hour"><time>11:15</time></p>
+    <p><span class="track track-tutorials">#auditório</span></p>
+    <p class="talk">Kivy: Python no celular e em vários outros lugares!</p>
+    <p class="speaker">Diego Dukao</p>
+
+    <p><span class="track track-tutorials">#sala 1</span></p>
+    <p class="talk">Code Smells &amp; Refactoring - Who you gonna call?</p>
+    <p class="speaker">Ana Paula Gomes</p>
+  </div>
 
   <div class="lecture">
     <p class="hour"><time>12:00</time></p>
@@ -46,44 +59,59 @@
   </div>
 
   <div class="lecture">
-    <p class="hour"><time>14:00</time></p>
-
+    <p class="hour"><time>13:30</time></p>
     <p><span class="track track-tutorials">#auditório</span></p>
-    <a href="http://speakerfight.com/events/python-brasil12-tutoriais/#rows-extraindo-normalizando-e-salvando-dados-tabulares" target="_blank"><p class="talk">rows: extraindo, normalizando e salvando dados tabulares</p></a>
-    <p class="speaker">Álvaro Justen</p>
+    <p class="talk">Web2Py: Aplicações web descomplicadas em Python!</p>
+    <p class="speaker">Elloa</p>
 
-    <p><span class="track track-tutorials">#sala13</span></p>
-    <p class="talk">Django Girls</p>
-    <p class="speaker">Django Girls Floripa</p>
+    <p><span class="track track-tutorials">#sala 1</span></p>
+    <p class="talk">Unidos e distribuídos</p>
+    <p class="speaker">Ana Lacerda</p>
 
-    <p><span class="track track-tutorials">#sala14</span></p>
-    <p class="talk">Django Girls</p>
-    <p class="speaker">Django Girls Floripa</p>
+  </div>
 
-    <p><span class="track track-tutorials">#sala15</span></p>
-    <a href="http://speakerfight.com/events/python-brasil12-tutoriais/#flappyladies-crie-seu-primeiro-jogo-em-python-2" target="_blank"><p class="talk">FlapPyLadies: Crie seu primeiro jogo em Python!</p></a>
-    <p class="speaker">Jessica Dias</p>
+  <div class="lecture">
+    <p class="hour"><time>14:15</time></p>
+    <p><span class="track track-tutorials">#auditório</span></p>
+    <p class="talk">Prevendo futuro com machine learning</p>
+    <p class="speaker">Emilio Simoni</p>
 
-    <p><span class="track track-tutorials">#sala16</span></p>
-    <a href="http://speakerfight.com/events/python-brasil12-tutoriais/#workshop-qual-e-a-desse-tal-de-kanban-e-como-ele-pode-te-ajudar-a-ser-agil-de-verdade" target="_blank"><p class="talk">Qual é a desse tal de Kanban, e como ele pode te ajudar a ser ágil de verdade</p></a>
-    <p class="speaker">Rodrigo Vieira</p>
+    <p><span class="track track-tutorials">#sala 1</span></p>
+    <p class="talk">Python + Flask + MongoDB = Quokka CMS</p>
+    <p class="speaker">Marcos P.</p>
+  </div>
 
-    <p><span class="track track-tutorials">#sala17</span></p>
-    <a href="http://speakerfight.com/events/python-brasil12-tutoriais/#pyspark-e-computacao-distribuida" target="_blank"><p class="talk">pyspark e computação distribuida</p></a>
-    <p class="speaker">Robson Luis</p>
+  <div class="lecture">
+    <p class="hour"><time>15:00</time></p>
+    <p><span class="track track-tutorials">#auditório</span></p>
+    <p class="talk">Python, ciência dos dados e redes sociais: uma combinação poderosa</p>
+    <p class="speaker">Alice Adativa</p>
+
+    <p><span class="track track-tutorials">#sala 1</span></p>
+    <p class="talk">Redes Neurais Artificiais para o Reconhecimento Facial e de Voz em Interfaces de Controle e de Supervisão e Aquisição de Dados e Interfaces Homem-Máquina</p>
+    <p class="speaker">Fabiano Cardoso</p>
   </div>
 
   <div class="lecture">
     <p class="hour"><time>15:45</time></p>
     <p class="talk">Coffe Break</p>
     <p class="speaker"></p>
-   </div>
+  </div>
 
   <div class="lecture">
     <p class="hour"><time>16:15</time></p>
+    <p><span class="track track-tutorials">#auditório</span></p>
+    <p class="talk">Palestra Seja um Autor de livros técnicos</p>
+    <p class="speaker">Ana Carolina Prates</p>
 
-    <p><span class="track track-tutorials">#sala16</span></p>
-    <a href="http://speakerfight.com/events/python-brasil12-tutoriais/#realizacao-de-um-coding-dojo-no-formato-randori" target="_blank"><p class="talk">Realização de um Coding Dojo no formato Randori</p></a>
-    <p class="speaker">PyLadies São Carlos</p>
-  </div> -->
+  </div>
+
+  <div class="lecture">
+    <p class="hour"><time>17:00</time></p>
+    <p><span class="track track-tutorials">#auditório</span></p>
+    <p class="talk">Mesa Redonda</p>
+    <p class="speaker"></p>
+  </div>
+
+
 </div>
