--- a/theme/templates/includes/speakers.html
+++ b/theme/templates/includes/speakers.html
@@ -20,7 +20,7 @@
             <li class="speaker">
                 <a href="#" target="_blank" class="speaker-link">
                     <div class="photo">
-                        <img src="/images/speakers/shape-people3.png" alt="Temp">
+                        <img src="/images/nilo.png" alt="Temp">
                     </div>
 
                     <h2 class="speaker-name">Nilo Menezes</h2>
