--- a/theme/templates/includes/volunteers.html
+++ b/theme/templates/includes/volunteers.html
@@ -6,8 +6,9 @@
       <li><a href="https://twitter.com/apast" target="_blank">Adriano Praia (PyNorte/Manaus)</a></li>
       <li><a href="https://twitter.com/luizfcb" target="_blank">Fabio Barrionuevo da Luz (PyNorte/Palmas)</a></li>
       <li><a href="https://twitter.com/pixeledbird" target="_blank">João Soares (PyNorte/Belém)</a></li>
-      <li>Marcos Thomaz (PyNorte/Rio Branco)</a></li>
-      <li>Pedro Cavalcante (PyNorte/Manaus)</a></li>
+      <li>Marcos Thomaz (PyNorte/Rio Branco)</li>
+      <li>Pedro Cavalcante (PyNorte/Manaus)</li>
+      <li><a href="https://twitter.com/jukxapp" target="_blank">Felipe Jukx (PyNorte/Manaus)</a></li>
     </ul>
     <br/>
     <h1>Coordenação UEA</h1>
