--- a/theme/templates/includes/welcome.html
+++ b/theme/templates/includes/welcome.html
@@ -20,7 +20,7 @@
       <p>Universidade do Estado do Amazonas/Escola Superior de Tecnologia (UEA/EST)<br/>
       Manaus/AM</p>
 
-      <!-- <a href="#" target="_blank" class="register">INSCREVA-SE AQUI</a> -->
+      <a href="https://www.eventbrite.com.br/e/pycon-amazonia-2017-tickets-33333942720" target="_blank" class="register">INSCREVA-SE AQUI</a>
     </article>
   </div>
 </section>
