--- a/theme/templates/includes/days/day1.html
+++ b/theme/templates/includes/days/day1.html
@@ -1,50 +1,55 @@
 <div class="room" id="day1">
-  <h1>A definir</h1>
-  <!-- <p class="day-description">Tutoriais são treinamentos de 2 a 8 horas totalmente gratuitos para você se tornar um Jedi.
-  <a href="http://blog.pythonbrasil.org.br/se-inscreva-para-os-tutoriais-aqui.html#article" target="_blank" class="register">INSCREVA-SE AQUI</a>
-  </p>
-  <p class="local">LOCAL: <a target="_blank" href="https://www.google.com.br/maps/place/Faculdade+Cesusc/@-27.5004885,-48.5172277,17z/data=!3m1!4b1!4m5!3m4!1s0x9527468b52090801:0xb067ed420bbae02b!8m2!3d-27.5004885!4d-48.515039?hl=en">Faculdade Cesusc</a></p>
+  <h1>Programação Provisória</h1>
+  <p class="day-description">A submissão de palestras ainda está aberta.</p>
+  <p class="local">LOCAL: UEA /EST</a></p>
 
   <div class="lecture">
     <p class="hour"><time>08:00</time></p>
-
     <p><span class="track track-tutorials">#auditório</span></p>
-    <a href="http://speakerfight.com/events/python-brasil12-tutoriais/#curso-basico-de-python" target="_blank"><p class="talk">Curso Básico de Python</p></a>
-    <p class="speaker">PyLadies - SP</p>
-
-    <p><span class="track track-tutorials">#sala107</span></p>
-    <a href="http://speakerfight.com/events/python-brasil12-tutoriais/#wolfcrypt-embalando-segredos-com-python" target="_blank"><p class="talk">Wolfcrypt: embalando segredos com Python</p></a>
-    <p class="speaker">Moisés Guimarães</p>
-
-    <p><span class="track track-tutorials">#sala108</span></p>
-    <p class="talk">Lógica de programação em Python</p>
-    <p class="speaker">Escola de Dados</p>
-
-    <p><span class="track track-tutorials">#sala109</span></p>
-    <a href="http://speakerfight.com/events/python-brasil12-tutoriais/#elm-chega-de-dor-de-cabeca-com-o-frontend" target="_blank"><p class="talk">Elm: chega de dor de cabeça com o frontend</p></a>
-    <p class="speaker">Eduardo Cuducos</p>
-
-    <p><span class="track track-tutorials">#sala110</span></p>
-    <a href="http://speakerfight.com/events/python-brasil12-tutoriais/#odoo-open-source-erp-como-instalar-e-desenvolver-aplicacoes-empresariais" target="_blank"><p class="talk">Odoo - Open Source ERP - Como instalar e desenvolver aplicações empresariais</p></a>
-    <p class="speaker">Luis Felipe Miléo</p>
-
-    <p><span class="track track-tutorials">#sala111</span></p>
-    <a href="http://speakerfight.com/events/python-brasil12-tutoriais/#arquitetura-especificacao-e-implementacao-de-apis-rest" target="_blank"><p class="talk">Arquitetura, Especificação e Implementação de APIs REST</p></a>
-    <p class="speaker">Felipe Rodrigues</p>
-   </div>
-
-   <div class="lecture">
-    <p class="hour"><time>09:45</time></p>
-    <p class="talk">Coffe Break</p>
+    <p class="talk">Registro</p>
     <p class="speaker"></p>
-   </div>
+  </div>
 
   <div class="lecture">
-    <p class="hour"><time>10:15</time></p>
+    <p class="hour"><time>09:00</time></p>
+    <p><span class="track track-tutorials">#auditório</span></p>
+    <p class="talk">Abertura</p>
+    <p class="speaker"></p>
+  </div>
 
-    <p><span class="track track-tutorials">#sala109</span></p>
-    <a href="http://speakerfight.com/events/python-brasil12-tutoriais/#hackeando-dados-publicos-com-python-2h-2" target="_blank"><p class="talk">Hackeando Dados Públicos com Python</p></a>
-    <p class="speaker">Fernando Masanori</p>
+  <div class="lecture">
+    <p class="hour"><time>09:15</time></p>
+    <p><span class="track track-tutorials">#auditório</span></p>
+    <p class="talk">KeyNote</p>
+    <p class="speaker">Fernando Massanori</p>
+  </div>
+
+  <div class="lecture">
+    <p class="hour"><time>10:00</time></p>
+    <p class="talk">Coffe Break</p>
+    <p class="speaker"></p>
+  </div>
+
+  <div class="lecture">
+    <p class="hour"><time>10:30</time></p>
+    <p><span class="track track-tutorials">#auditório</span></p>
+    <p class="talk">Funções também são objetos!</p>
+    <p class="speaker">Luciano Ramalho</p>
+
+    <p><span class="track track-tutorials">#sala 1</span></p>
+    <p class="talk">Introducao ao Python para cientistas</p>
+    <p class="speaker">M. Gomes</p>
+  </div>
+
+  <div class="lecture">
+    <p class="hour"><time>11:15</time></p>
+    <p><span class="track track-tutorials">#auditório</span></p>
+    <p class="talk">Python Assíncrono</p>
+    <p class="speaker">Nilo Menezes</p>
+
+    <p><span class="track track-tutorials">#sala 1</span></p>
+    <p class="talk">Marketing e Persuasão, Design em Código, Empreendorismo Digital.</p>
+    <p class="speaker">Loren Carla</p>
   </div>
 
   <div class="lecture">
@@ -54,31 +59,44 @@
   </div>
 
   <div class="lecture">
-    <p class="hour"><time>14:00</time></p>
-
+    <p class="hour"><time>13:30</time></p>
     <p><span class="track track-tutorials">#auditório</span></p>
-    <a href="http://speakerfight.com/events/python-brasil12-tutoriais/#curso-basico-de-python" target="_blank"><p class="talk">Curso Básico de Python</p></a>
-    <p class="speaker">PyLadies - SP</p>
+    <p class="talk">House of data - ciência de dados para desenvolvedores</p>
+    <p class="speaker">Ana Paula Gomes</p>
 
-    <p><span class="track track-tutorials">#sala107</span></p>
-    <a href="http://speakerfight.com/events/python-brasil12-tutoriais/#desenvolvimento-de-web-scrapers-com-scrapy" target="_blank"><p class="talk">Desenvolvimento de Web Scrapers com Scrapy</p></a>
-    <p class="speaker">Valdir Stumm Junior</p>
+    <p><span class="track track-tutorials">#sala 1</span></p>
+    <p class="talk">Acessibilidade para deficientes visuais com Python</p>
+    <p class="speaker">Marcos P.</p>
 
-    <p><span class="track track-tutorials">#sala108</span></p>
-    <a href="http://speakerfight.com/events/python-brasil12-tutoriais/#python-orientado-a-objetos" target="_blank"><p class="talk">Python Orientado a Objetos</p></a>
-    <p class="speaker">Luiz Menezes</p>
+    <p><span class="track track-tutorials">#sala 2</span></p>
+    <p class="talk">Deploy fácil e automático do seu projeto Django com Jenkins e Elastic Beanstalk</p>
+    <p class="speaker">Julio Eiras</p>
+  </div>
 
-    <p><span class="track track-tutorials">#sala109</span></p>
-    <a href="http://speakerfight.com/events/python-brasil12-tutoriais/#introducao-apache-cassandra" target="_blank"><p class="talk">Introdução - Apache Cassandra</p></a>
-    <p class="speaker">Hanneli Tavante</p>
+  <div class="lecture">
+    <p class="hour"><time>14:15</time></p>
+    <p><span class="track track-tutorials">#auditório</span></p>
+    <p class="talk">Tecnologia REST em Python</p>
+    <p class="speaker">Allex Lima</p>
 
-    <p><span class="track track-tutorials">#sala110</span></p>
-    <a href="http://speakerfight.com/events/python-brasil12-tutoriais/#odoo-open-source-erp-como-instalar-e-desenvolver-aplicacoes-empresariais" target="_blank"><p class="talk">Odoo - Open Source ERP - Como instalar e desenvolver aplicações empresariais</p></a>
-    <p class="speaker">Luis Felipe Miléo</p>
+    <p><span class="track track-tutorials">#sala 1</span></p>
+    <p class="talk">Django para startups: o caso da amazonense Jukx App</p>
+    <p class="speaker">Felipe Carvalho</p>
 
-    <p><span class="track track-tutorials">#sala111</span></p>
-    <a href="http://speakerfight.com/events/python-brasil12-tutoriais/#arquitetura-especificacao-e-implementacao-de-apis-rest" target="_blank"><p class="talk">Arquitetura, Especificação e Implementação de APIs REST</p></a>
-    <p class="speaker">Felipe Rodrigues</p>
+    <p><span class="track track-tutorials">#sala 2</span></p>
+    <p class="talk">Análise de Sentimento em Redes Sociais utilizando Scikit-learn+NLTK</p>
+    <p class="speaker">Thais Almeida</p>
+  </div>
+
+  <div class="lecture">
+    <p class="hour"><time>15:00</time></p>
+    <p><span class="track track-tutorials">#auditório</span></p>
+    <p class="talk">Começando com o microframework web Python mais popular: Flask!</p>
+    <p class="speaker">Felipe Colen</p>
+
+    <p><span class="track track-tutorials">#sala 1</span></p>
+    <p class="talk">Buzzwords desconstruídas: bitcoin e blockchain!</p>
+    <p class="speaker">M.Costa</p>
   </div>
 
   <div class="lecture">
@@ -89,9 +107,22 @@
 
   <div class="lecture">
     <p class="hour"><time>16:15</time></p>
+    <p><span class="track track-tutorials">#auditório</span></p>
+    <p class="talk">Trabalho remoto - é mesmo assim tão bom?</p>
+    <p class="speaker">Julio Eiras</p>
 
-    <p><span class="track track-tutorials">#sala109</span></p>
-    <a href="http://speakerfight.com/events/python-brasil12-tutoriais/#unsupervised-learning-with-python" target="_blank"><p class="talk">Unsupervised Learning with Python</p></a>
-    <p class="speaker">Breandan Considine</p> -->
-  <!-- </div> -->
+    <p><span class="track track-tutorials">#sala 1</span></p>
+    <p class="talk">Programando a Felicidade</p>
+    <p class="speaker">Renzo</p>
+
+  </div>
+
+  <div class="lecture">
+    <p class="hour"><time>17:00</time></p>
+    <p><span class="track track-tutorials">#auditório</span></p>
+    <p class="talk">Encontro com a comunidade</p>
+    <p class="speaker"></p>
+  </div>
+
+
 </div>
