Problema no Speakerfight.
Former-commit-id: 3ccfce5f6b63927dea40b2907f26324f17b2291d [formerly f31da4c9d2b310b5d5057a7f5fd74deb33e1ad37]
Former-commit-id: b72ac897f558ad5b2ab93336a557f1e6cf250814

--- a/theme/templates/includes/about.html
+++ b/theme/templates/includes/about.html
@@ -20,7 +20,7 @@
         {% include "includes/icons/staff-icon.html" %}
         <h1>Envie sua proposta de palestra!</h1>
           <p>Apresente na PyCon Amazônia e compartilhe o que você sabe sobre Python com a comunidade.</p>
-          <p class="code-of-conduct"><a href="http://speakerfight.com/events/pycon-amazonia-2017/" target="_blank">Envie sua proposta</a></p>
+          <p class="code-of-conduct"><a href="mailto:pyamazonia@python.org.br" target="_blank">Envie sua proposta</a></p>
       </div>
       <div class="column">
         {% include "includes/icons/staff-icon.html" %}
