ajusta zoom do mapa e posicionamento do texto
Former-commit-id: 9b21980c3d5411460d5e676a8c6f975ec57d95ee [formerly 9de4e129ea692ad7403a4db3ff88417cced0b938]
Former-commit-id: c14baa1b56cc5f7534c7aca09469471f0d40e03c

--- a/theme/static/css/main.css
+++ b/theme/static/css/main.css
@@ -648,3 +648,17 @@ a:hover {
     -webkit-transform: translateY(-50%); }
 
 /*# sourceMappingURL=main.css.map */
+
+/* content maps block scrol zoom*/
+.map-container {
+  width: 95%;
+}
+.map-container iframe{
+  width: 100%;
+  display: block;
+  pointer-events: none;
+  position: relative; /* IE needs a position other than static */
+}
+.map-container iframe.clicked{
+  pointer-events: auto;
+}
