--- a/theme/templates/includes/location.html
+++ b/theme/templates/includes/location.html
@@ -3,10 +3,21 @@
     {% include "includes/icons/maps-icon.html" %}
 
     <h1>Manaus - Amazonas</h1>
-    <p>Avenida Darcy Vargas, 1200 - Parque 10<br/>
-       69050-020 Manaus, Amazonas</p>
-       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7968.046696989688!2d-60.024461003030204!3d-3.088441040959843!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x926c1aa5a5540129%3A0x148088e86e2c44f7!2sEscola+Superior+de+Tecnologia+-+EST!5e0!3m2!1sen!2sbe!4v1491033912128" width="95%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-    <p><a href="http://www3.uea.edu.br/" target="_blank" class="link">Acesse o site da UEA</a></p>
+    <p>
+      Avenida Darcy Vargas, 1200 - Parque 10<br/>
+      69050-020 Manaus, Amazonas
+    </p>
+    <br>
+    <p>
+      <a href="http://www3.uea.edu.br/" target="_blank" class="link" style="font-size: larger; font-weight: bold">
+        Acesse o site da UEA</a>
+    </p>
+    <br>
+    <div class="map-container">
+      <iframe scrolling="no" marginheight="0" marginwidth="0"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7968.046696989688!2d-60.024461003030204!3d-3.088441040959843!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x926c1aa5a5540129%3A0x148088e86e2c44f7!2sEscola+Superior+de+Tecnologia+-+EST!5e0!3m2!1sen!2sbe!4v1491033912128"
+              height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div>
   </div>
   <div class="row rates">
     <div class="tax">
@@ -16,6 +27,5 @@
         Quarto Luxo – R$ 755,82
       </p>
     </div>
-  </div>
   </div>
 </section>
