corrige links, melhora exibição da programação, inclui voluntário
Former-commit-id: b2764b0d6f1ee3e8033f41a3ec4bc71563453c35 [formerly 28dd27ac5f937a16e1bdabb286a70fa9a44e6987]
Former-commit-id: 8a7dd15a1eb49275c4763dcf9c385ee06fc0086e

--- a/theme/templates/includes/about.html
+++ b/theme/templates/includes/about.html
@@ -26,7 +26,7 @@
         {% include "includes/icons/staff-icon.html" %}
         <h1>Contato</h1>
           <p>Email: <a href="mailto:pyamazonia@python.org.br">pyamazonia@python.org.br</a></p>
-          <p>Telegram: <a href="bit.ly/pynorte">bit.ly/pynorte</a></p>
+          <p>Telegram: <a href="http://bit.ly/pynorte">bit.ly/pynorte</a></p>
       </div>
   </div>
 </section>
