--- a/theme/templates/includes/days/day1.html
+++ b/theme/templates/includes/days/day1.html
@@ -1,25 +1,25 @@
-<div class="room" id="day1">
-  <h1>Programação Provisória</h1>
+<div class="room active" id="day1">
+  <h1>Programação Provisória - Sábado</h1>
   <p class="day-description">A submissão de palestras ainda está aberta.</p>
-  <p class="local">LOCAL: UEA /EST</a></p>
+  <p class="local">LOCAL: UEA /EST</p>
 
   <div class="lecture">
     <p class="hour"><time>08:00</time></p>
-    <p><span class="track track-tutorials">#auditório</span></p>
+    <p><span class="track track-beginners">#auditório</span></p>
     <p class="talk">Registro</p>
     <p class="speaker"></p>
   </div>
 
   <div class="lecture">
     <p class="hour"><time>09:00</time></p>
-    <p><span class="track track-tutorials">#auditório</span></p>
+    <p><span class="track track-beginners">#auditório</span></p>
     <p class="talk">Abertura</p>
     <p class="speaker"></p>
   </div>
 
   <div class="lecture">
     <p class="hour"><time>09:15</time></p>
-    <p><span class="track track-tutorials">#auditório</span></p>
+    <p><span class="track track-keynote">#auditório</span></p>
     <p class="talk">KeyNote</p>
     <p class="speaker">Fernando Massanori</p>
   </div>
@@ -32,11 +32,11 @@
 
   <div class="lecture">
     <p class="hour"><time>10:30</time></p>
-    <p><span class="track track-tutorials">#auditório</span></p>
+    <p><span class="track track-keynote">#auditório</span></p>
     <p class="talk">Funções também são objetos!</p>
     <p class="speaker">Luciano Ramalho</p>
 
-    <p><span class="track track-tutorials">#sala 1</span></p>
+    <p><span class="track track-pydata">#sala 1</span></p>
     <p class="talk">Introducao ao Python para cientistas</p>
     <p class="speaker">M. Gomes</p>
   </div>
@@ -47,7 +47,7 @@
     <p class="talk">Python Assíncrono</p>
     <p class="speaker">Nilo Menezes</p>
 
-    <p><span class="track track-tutorials">#sala 1</span></p>
+    <p><span class="track track-career">#sala 1</span></p>
     <p class="talk">Marketing e Persuasão, Design em Código, Empreendorismo Digital.</p>
     <p class="speaker">Loren Carla</p>
   </div>
@@ -60,7 +60,7 @@
 
   <div class="lecture">
     <p class="hour"><time>13:30</time></p>
-    <p><span class="track track-tutorials">#auditório</span></p>
+    <p><span class="track track-pydata">#auditório</span></p>
     <p class="talk">House of data - ciência de dados para desenvolvedores</p>
     <p class="speaker">Ana Paula Gomes</p>
 
@@ -75,11 +75,11 @@
 
   <div class="lecture">
     <p class="hour"><time>14:15</time></p>
-    <p><span class="track track-tutorials">#auditório</span></p>
+    <p><span class="track track-web">#auditório</span></p>
     <p class="talk">Tecnologia REST em Python</p>
     <p class="speaker">Allex Lima</p>
 
-    <p><span class="track track-tutorials">#sala 1</span></p>
+    <p><span class="track track-web">#sala 1</span></p>
     <p class="talk">Django para startups: o caso da amazonense Jukx App</p>
     <p class="speaker">Felipe Carvalho</p>
 
@@ -90,7 +90,7 @@
 
   <div class="lecture">
     <p class="hour"><time>15:00</time></p>
-    <p><span class="track track-tutorials">#auditório</span></p>
+    <p><span class="track track-web">#auditório</span></p>
     <p class="talk">Começando com o microframework web Python mais popular: Flask!</p>
     <p class="speaker">Felipe Colen</p>
 
@@ -107,11 +107,11 @@
 
   <div class="lecture">
     <p class="hour"><time>16:15</time></p>
-    <p><span class="track track-tutorials">#auditório</span></p>
+    <p><span class="track track-career">#auditório</span></p>
     <p class="talk">Trabalho remoto - é mesmo assim tão bom?</p>
     <p class="speaker">Julio Eiras</p>
 
-    <p><span class="track track-tutorials">#sala 1</span></p>
+    <p><span class="track track-career">#sala 1</span></p>
     <p class="talk">Programando a Felicidade</p>
     <p class="speaker">Renzo</p>
 
@@ -119,7 +119,7 @@
 
   <div class="lecture">
     <p class="hour"><time>17:00</time></p>
-    <p><span class="track track-tutorials">#auditório</span></p>
+    <p><span class="track track-keynote">#auditório</span></p>
     <p class="talk">Encontro com a comunidade</p>
     <p class="speaker"></p>
   </div>
