--- a/theme/templates/includes/days/day2.html
+++ b/theme/templates/includes/days/day2.html
@@ -1,25 +1,25 @@
 <div class="room" id="day2">
-  <h1>Programação Provisória</h1>
+  <h1>Programação Provisória - Domingo</h1>
   <p class="day-description">A submissão de palestras ainda está aberta.</p>
-  <p class="local">LOCAL: UEA /EST</a></p>
+  <p class="local">LOCAL: UEA /EST</p>
 
   <div class="lecture">
     <p class="hour"><time>08:00</time></p>
-    <p><span class="track track-tutorials">#auditório</span></p>
+    <p><span class="track track-beginners">#auditório</span></p>
     <p class="talk">Registro</p>
     <p class="speaker"></p>
   </div>
 
   <div class="lecture">
     <p class="hour"><time>09:00</time></p>
-    <p><span class="track track-tutorials">#auditório</span></p>
+    <p><span class="track track-beginners">#auditório</span></p>
     <p class="talk">Abertura</p>
     <p class="speaker"></p>
   </div>
 
   <div class="lecture">
     <p class="hour"><time>09:15</time></p>
-    <p><span class="track track-tutorials">#auditório</span></p>
+    <p><span class="track track-keynote">#auditório</span></p>
     <p class="talk">KeyNote</p>
     <p class="speaker">Nilo Menezes</p>
   </div>
@@ -36,7 +36,7 @@
     <p class="talk">Programming soft skills</p>
     <p class="speaker">Wille Marcel</p>
 
-    <p><span class="track track-tutorials">#sala 1</span></p>
+    <p><span class="track track-web">#sala 1</span></p>
     <p class="talk">Docker, Django e Amazon Container Services</p>
     <p class="speaker">Nilo Menezes</p>
   </div>
@@ -60,7 +60,7 @@
 
   <div class="lecture">
     <p class="hour"><time>13:30</time></p>
-    <p><span class="track track-tutorials">#auditório</span></p>
+    <p><span class="track track-web">#auditório</span></p>
     <p class="talk">Web2Py: Aplicações web descomplicadas em Python!</p>
     <p class="speaker">Elloa</p>
 
@@ -76,14 +76,14 @@
     <p class="talk">Prevendo futuro com machine learning</p>
     <p class="speaker">Emilio Simoni</p>
 
-    <p><span class="track track-tutorials">#sala 1</span></p>
+    <p><span class="track track-web">#sala 1</span></p>
     <p class="talk">Python + Flask + MongoDB = Quokka CMS</p>
     <p class="speaker">Marcos P.</p>
   </div>
 
   <div class="lecture">
     <p class="hour"><time>15:00</time></p>
-    <p><span class="track track-tutorials">#auditório</span></p>
+    <p><span class="track track-pydata">#auditório</span></p>
     <p class="talk">Python, ciência dos dados e redes sociais: uma combinação poderosa</p>
     <p class="speaker">Alice Adativa</p>
 
@@ -100,7 +100,7 @@
 
   <div class="lecture">
     <p class="hour"><time>16:15</time></p>
-    <p><span class="track track-tutorials">#auditório</span></p>
+    <p><span class="track track-career">#auditório</span></p>
     <p class="talk">Palestra Seja um Autor de livros técnicos</p>
     <p class="speaker">Ana Carolina Prates</p>
 
@@ -108,7 +108,7 @@
 
   <div class="lecture">
     <p class="hour"><time>17:00</time></p>
-    <p><span class="track track-tutorials">#auditório</span></p>
+    <p><span class="track track-keynote">#auditório</span></p>
     <p class="talk">Mesa Redonda</p>
     <p class="speaker"></p>
   </div>
