--- a/theme/templates/includes/schedule.html
+++ b/theme/templates/includes/schedule.html
@@ -6,7 +6,7 @@
     <nav class="days">
       <ul class="list">
         <li class="item">
-          <a href="#day1" class="item-link">Dia 12</a>
+          <a href="#day1" class="item-link active">Dia 12</a>
         </li>
 
         <li class="item">
