--- a/theme/templates/includes/volunteers.html
+++ b/theme/templates/includes/volunteers.html
@@ -1,20 +1,23 @@
 <section class="volunteers">
-  <div class="row">
+  <div class="row" align="center">
     <h1>Voluntários</h1>
     <ul>
       <li><a href="https://twitter.com/lskbr" target="_blank">Nilo Menezes (PyNorte)</a></li>
       <li><a href="https://twitter.com/apast" target="_blank">Adriano Praia (PyNorte/Manaus)</a></li>
       <li><a href="https://twitter.com/luizfcb" target="_blank">Fabio Barrionuevo da Luz (PyNorte/Palmas)</a></li>
       <li><a href="https://twitter.com/pixeledbird" target="_blank">João Soares (PyNorte/Belém)</a></li>
-      <li>Marcos Thomaz (PyNorte/Rio Branco)</li>
+      <li><a href="https://twitter.com/marcosthomazs" target="_blank">Marcos Thomaz (PyNorte/Rio Branco)</a></li>
       <li>Pedro Cavalcante (PyNorte/Manaus)</li>
       <li><a href="https://twitter.com/jukxapp" target="_blank">Felipe Jukx (PyNorte/Manaus)</a></li>
+      <li><a href="https://twitter.com/felipecolen" target="_blank">Felipe Colen (PyNorte/Porto Velho)</a></li>
     </ul>
+    <br/>
+    <br/>
     <br/>
     <h1>Coordenação UEA</h1>
     <ul>
-      <li>Prof&#xaa; Daniele Gordiano Valente (Coordenação Local)</li>
-      <li>Prof&#xaa; Daniele Noronha Pontes (Coordenação Institucional)</li>
+      <li>Prof&#xaa; Daniele Gordiano Valente <br>(Coordenação Local)</li>
+      <li>Prof&#xaa; Daniele Noronha Pontes <br>(Coordenação Institucional)</li>
     </ul>
   </div>
 
